--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,7 +12,7 @@
   </head>
 
 
-  <%= require('html-loader!./assets/html/navbar.html') %>
+  <%= require('html-loader!./templates/navbar.html') %>
 
 
 
@@ -256,7 +256,7 @@
 
 
 
-      <%= require('html-loader!./assets/html/footer.html') %>
+      <%= require('html-loader!./templates/footer.html') %>
 
 
       <a id="scrollUp" href="#top" style="position: fixed; z-index: 2147483647;"><i class="icon-arrow-up"></i></a>
