--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -214,31 +214,6 @@ a
   font-size:1.2em;
 }
 
-.asset-list
-{
-  table
-  {
-    width:100%;
-  }
-
-  thead
-  {
-      font-size: 1em;
-    border-bottom: 1px solid black;
-  }
-  tbody
-  {
-    font-size: 1.5em;
-  }
-  tr
-  {
-    border-bottom: 1px solid black;
-  }
-  td
-  {
-    padding: 15px 0px;
-  }
-}
 
 .hide-overflow
 {
@@ -289,26 +264,8 @@ a
   margin-left: auto;
 }
 
-.action-container
-{
 
-  .token-titlebar
-  {
-    padding: 10px 10px;
-  }
 
-  .token-title
-  {
-    font-size: 2em;
-
-  }
-
-  .token-icon
-   {
-
-   }
-
-}
 
 .one-third
 {
@@ -322,43 +279,12 @@ a
   display: inline-block;
 }
 
-
-.lava-packet-dropzone
-{
- 
-
-  background: repeating-linear-gradient(45deg, #ffebcb, #ffebcb,10px, #ffffff 10px, #ffffff 20px);
-  padding: 25px;
-  border-radius: 10px;
-
-  .subtitle
-  {
-    text-align: center;
-    color:black;
-
-  }
-  .dropzone
-  {
-    min-height:250px;
-
-    .hand-icon-holder
-    {
-      font-size:2em;
-      margin:0 auto;
-    }
-
-    .dropzone-file-input-container
-    {
-      text-align: center;
-      padding:20px;
-      margin:0 auto;
-    }
-  }
-
-}
-
-
-
+ .jumbo-logo-container
+ {
+   width:100%;
+   text-align: center;
+   margin:20px;
+ }
 
 .order-row
 {
