--- a/app/views/templates/footer.html
+++ b/app/views/templates/footer.html
@@ -3,7 +3,7 @@
      <div class="content has-text-centered">
        <p>
          <div class="address-title has-text-centered">
-           Lava Contract: {{ address }}
+             Contract: {{ address }}
          </div>
 
           <br>
