search bar works

--- a/app/views/templates/navbar.html
+++ b/app/views/templates/navbar.html
@@ -6,7 +6,7 @@
     <a class="navbar-item" href="/">
 
          0xBitcoin Explorer
-       
+
     </a>
 
   </div>
@@ -93,7 +93,7 @@
 
        <div class="nav-search-container field is-horizontal">
          <input class="input nav-search search" type="text" placeholder="Search...">
-         <a class="button search-go">Go</a>
+         <a class="button nav-search-go">Go</a>
        </div>
 
       </div>
