--- a/app/views/search.html
+++ b/app/views/search.html
@@ -14,7 +14,7 @@
 
 
 
-<div class="page-container" id="home">
+<div class="page-container" id="search">
 
 
       <div   class="title">
@@ -69,6 +69,6 @@
 
 
       <%= require('html-loader!./templates/footer.html') %>
- 
+
   </body>
 </html>
