--- a/app/views/search.html
+++ b/app/views/search.html
@@ -40,7 +40,7 @@
                 </tr>
               </thead>
               <tbody>
-              <tr v-for="(item, index) in results.resultsList"   v-bind:class="{   'asset-row':true, 'acts-as-link':true, 'hover-shadow':true   } " >
+              <tr v-for="(item, index) in results"   v-bind:class="{   'asset-row':true, 'acts-as-link':true, 'hover-shadow':true   } " >
 
                 <td class="row-cell has-text-centered  "> {{index}} </td>
                  <td class="row-cell has-text-centered  "> {{item.type}} </td>
