--- a/app/views/index.html
+++ b/app/views/index.html
@@ -40,6 +40,68 @@
         <div class="hero-body">
 
 
+          <div class="columns">
+            <div class="column">
+
+              <div id="mint-list" class="event-list" v-cloak>
+
+
+                <div class="subtitle" >Recent Mints</div>
+
+                <table>
+                  <thead>
+                    <tr >
+                      <td class="has-text-centered"> Block </td>
+                      <td class="has-text-centered"> Hash </td>
+
+                    </tr>
+                  </thead>
+                  <tbody>
+                  <tr v-for="(item, index) in list"   v-bind:class="{   'asset-row':true, 'acts-as-link':true, 'hover-shadow':true   } " >
+
+                      <td class="row-cell has-text-centered  "> {{item.blockNumberFormatted}} </td>
+                     <td class="row-cell has-text-centered "> <a v-bind:href="item.url"> {{item.address}} </a> </td>
+
+                  </tr>
+                </tbody>
+              </table>
+
+               </div>
+
+            </div>
+
+            <div class="column">
+
+              <div id="transfer-list" class="event-list" v-cloak>
+
+
+
+                <div class="subtitle" >Recent Transfers</div>
+
+                <table>
+                  <thead>
+                    <tr >
+                      <td class="has-text-centered"> Block </td>
+                      <td class="has-text-centered"> Hash </td>
+
+                    </tr>
+                  </thead>
+                  <tbody>
+                  <tr v-for="(item, index) in list"   v-bind:class="{   'asset-row':true, 'acts-as-link':true, 'hover-shadow':true   } " >
+
+                      <td class="row-cell has-text-centered  "> {{item.blockNumberFormatted}} </td>
+                     <td class="row-cell has-text-centered "> <a v-bind:href="item.transactionHash"> {{item.transactionHash}} </a> </td>
+
+                  </tr>
+                </tbody>
+              </table>
+
+               </div>
+
+            </div>
+
+          </div>
+
 
         <div class="whitespace-md"></div>
 
