--- a/app/views/transaction.html
+++ b/app/views/transaction.html
@@ -26,8 +26,31 @@
 
 
       <div id="tx-data" class="tx-data">
-        <div   class="title">
-          Tx Hash {{ txData.hash }}
+        <div   class="subtitle">
+          Tx Hash: {{ txData.hash }}
+        </div>
+
+        <div class="attributes">
+
+          <div class="attribute-row">
+            Type: {{ txData.txType }}
+          </div>
+          <div class="attribute-row">
+            To: <a v-bind:href="txData.toUrl"> {{ txData.to }} </a>
+          </div>
+          <div class="attribute-row">
+            From: <a v-bind:href="txData.fromUrl"> {{ txData.from }} </a>
+          </div>
+          <div class="attribute-row">
+            0xBitcoin:   {{ txData.transferAmount }}
+          </div>
+          <div class="attribute-row">
+            Raw Input: {{ txData.input }}
+          </div>
+          <div class="attribute-row">
+            <a v-bind:href="txData.etherscanUrl">  Etherscan Link  </a>
+          </div>
+
         </div>
 
 
