--- a/app/views/templates/footer.html
+++ b/app/views/templates/footer.html
@@ -2,7 +2,7 @@
    <div class=" ">
      <div class="content has-text-centered">
        <p>
-         <div class="address-title has-text-centered">
+         <div class="address-title has-text-centered" v-cloak>
              Contract: {{ address }}
          </div>
 
