--- a/app/views/templates/navbar.html
+++ b/app/views/templates/navbar.html
@@ -115,72 +115,12 @@
 <div class="navbar-start has-text-centered navbar-collapse-mobile" >
 
 
-    <hr>
-
-  <div class="navbar-item has-dropdown is-active">
-    <div class="navbar-link  is-active acts-as-link dropdown-button"  >
-      Docs
-    </div>
-    <div class="navbar-dropdown ">
-
-      <a class="navbar-item" target="blank" href="https://0x1d00ffff.github.io/0xBTC-Stats/?page=stats">
-        0xBTC Stats
-      </a>
-      <a class="navbar-item "  target="blank" href="https://github.com/0xbitcoin/white-paper">
-        White Paper
-      </a>
-      <a class="navbar-item "  target="blank" href="https://etherscan.io/address/0xb6ed7644c69416d67b522e20bc294a9a9b405b31#code">
-        Smart Contract
-      </a>
-
-      <!--
-      <a class="navbar-item "  target="blank" href="https://github.com/0xbitcoin/active-projects">
-        Active Projects
-      </a>
-      -->
-
-
-
-      <div class="whitespace-md"></div>
-
-
-      <hr class="navbar-divider">
-
-      <div class="navbar-image">
-        <div class="has-text-centered">
-
-          <img :src="contractQR" height="128" width="128" style="max-height:128px"/>
-
-
-        </div>
-      </div>
-    </div>
+  <div class="nav-search-container field is-horizontal">
+    <input class="input nav-search search" type="text" placeholder="Search...">
+    <a class="button nav-search-go">Go</a>
   </div>
 
-
     <hr>
-
-  <div class="navbar-item has-dropdown is-active  ">
-    <div class="navbar-link acts-as-link dropdown-button">
-      Community
-    </div>
-    <div class="navbar-dropdown ">
-
-      <a class="navbar-item "  target="blank" href="https://discord.gg/JGEqqmS">
-        Discord
-      </a>
-      <a class="navbar-item "  target="blank" href="https://reddit.com/r/0xbitcoin">
-        Subreddit
-      </a>
-      <a class="navbar-item" target="blank" href="https://github.com/0xbitcoin">
-        Github
-      </a>
-
-
-    </div>
-  </div>
-
-  <hr>
 
 
   </div>
