--- a/app/views/account.html
+++ b/app/views/account.html
@@ -29,7 +29,7 @@
 
 
             <div id="account-data" class="account-data">
-              <div   class="title">
+              <div   class="subtitle">
                 Account {{ address }}
               </div>
 
