--- a/app/views/account.html
+++ b/app/views/account.html
@@ -35,7 +35,7 @@
 
 
 
-              <div class="attributes">
+              <div class="attributes box">
 
                 <div class="attribute-row">
                   0xBitcoin Balance:  {{ tokenBalanceFormatted }}
