--- a/app/views/transaction.html
+++ b/app/views/transaction.html
@@ -30,7 +30,7 @@
           Tx Hash: {{ txData.hash }}
         </div>
 
-        <div class="attributes">
+        <div class="attributes box">
 
           <div class="attribute-row">
             Type: {{ txData.txType }}
