--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -264,7 +264,13 @@ a
   margin-left: auto;
 }
 
-
+.attribute-row
+{
+  text-overflow: ellipsis;
+ 
+white-space: nowrap;
+overflow: hidden;
+}
 
 
 .one-third
