--- a/app/views/templates/navbar.html
+++ b/app/views/templates/navbar.html
@@ -89,13 +89,14 @@
     </div>
 
 
-      <div class="navbar-end" style="padding:5px;">
+      <div class="navbar-end is-hidden-mobile" style="padding:5px;">
 
+      <!--
        <div class="nav-search-container field is-horizontal">
          <input class="input nav-search search" type="text" placeholder="Search...">
          <a class="button nav-search-go">Go</a>
        </div>
-
+     -->
       </div>
 
 
@@ -116,9 +117,10 @@
 
 
   <div class="nav-search-container field is-horizontal">
-    <input class="input nav-search search" type="text" placeholder="Search...">
-    <a class="button nav-search-go">Go</a>
+    <input class="input nav-search-mobile search" type="text" placeholder="Search...">
+    <a class="button nav-search-go-mobile">Go</a>
   </div>
+
 
     <hr>
 
