--- a/app/views/templates/navbar.html
+++ b/app/views/templates/navbar.html
@@ -91,12 +91,12 @@
 
       <div class="navbar-end is-hidden-mobile" style="padding:5px;">
 
-      <!--
+
        <div class="nav-search-container field is-horizontal">
          <input class="input nav-search search" type="text" placeholder="Search...">
          <a class="button nav-search-go">Go</a>
        </div>
-     -->
+      
       </div>
 
 
@@ -117,8 +117,8 @@
 
 
   <div class="nav-search-container field is-horizontal">
-    <input class="input nav-search-mobile search" type="text" placeholder="Search...">
-    <a class="button nav-search-go-mobile">Go</a>
+    <input class="input nav-search  search" type="text" placeholder="Search...">
+    <a class="button nav-search-go ">Go</a>
   </div>
 
 
